--- a/KeyframeStrengthReplacement.ipynb
+++ b/KeyframeStrengthReplacement.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9DlODf24CYezufDI3izWC",
+      "authorship_tag": "ABX9TyPox8FBWt++fhx+UHAEddA4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,6 +78,28 @@
         "button_html = f'<button onclick=\"navigator.clipboard.writeText(\\'{modified_keyframe_data}\\')\">Copy Output</button>'\n",
         "display(HTML(modified_keyframe_data + button_html))"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the dictionary with number to strength mappings\n",
+        "strength_mapping = {}\n",
+        "\n",
+        "# List of numbers to be updated\n",
+        "numbers = []\n",
+        "\n",
+        "# Update the list of numbers with the corresponding strength values\n",
+        "updated_numbers = [f\"{num}:({strength_mapping[num]:.2f})\" for num in numbers]\n",
+        "\n",
+        "# Print the updated list\n",
+        "for updated_num in updated_numbers:\n",
+        "    print(updated_num)\n"
+      ],
+      "metadata": {
+        "id": "8HX5VAGcKmWV"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
